--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       </tr>
 
       <tr>
-        <td rowspan="7" bgcolor="black"> <video src="img/leftlogo.mp4" autoplay loop muted></video> </td> <!--측면 블랙-->
-        <td colspan="5" rowspan="3"> <img src="img/grayscale.png" width="958px" height="358px" > </td>
+        <td rowspan="7" bgcolor="black"> <video src="./img/leftlogo.mp4" autoplay loop muted></video> </td> <!--측면 블랙-->
+        <td colspan="5" rowspan="3"> <img src="./img/grayscale.png" width="958px" height="358px" > </td>
         <td colspan="2" rowspan="3"> <p class="main_title">BRUTA<br>LISM</td>
       </tr>
 
@@ -77,7 +77,7 @@
           <br>The neutrality of gray gives us the ability to meditate and invisible.
           <br>Gray has the ability to show 'nothing' that other colors do not have. </p>
         </td>
-        <td rowspan="5" colspan="2" align="middle" valign="center" bgcolor="black" ><video src="img/rightlogo.mp4" autoplay loop muted></video></td>
+        <td rowspan="5" colspan="2" align="middle" valign="center" bgcolor="black" ><video src="./img/rightlogo.mp4" autoplay loop muted></video></td>
       </p></td>
       </tr>
   </table>
